MockFox changelog

r42
IH modelInfo files now added to IHGenKnownModuleNames, will no longer generate mock modules.

Included IHGenKnownModuleNames.lua, required by IHTearDown



r41 - 2017-07-24
MockFoxEngine.lua - Added NULL with some notes.

AddMockModules - adds empty functions for metatable methods __call,__index,__newindex

Deleted: MockFoxLua\initMock.lua startMock.lua, MockFox can now load them straight.

loadfile,dofile hook to redirect fox lua relative paths as hosts will have different working directory.

MoxFox can now load all unmodified/non IH set of data1 luas.

Included IHTearDown.lua, can be used to dump data from game to build mock modules.

r40 - 2017-07-23 - Initial public release