@@ -3,7 +3,8 @@
 --tex MockFox host stuff
 luaHostType="LDT"
 
-foxGamePath="C:/GamesSD/MGS_TPP/"
+foxGamePath="C:/GamesSD/MGS_TPP/"--tex used to reconstruct package.path to what it looks like in mgstpp, IH uses this to get the game path so it can load files in game folder\mod
+
 foxLuaPath="D:/Projects/MGS/!InfiniteHeaven/!modlua/Data1Lua/"--tex path of tpps scripts (qar luas) -- IH
 --foxLuaPath=[[J:\GameData\MGS\filetype\lua\data1_dat\]]--tex path of tpps scripts (qar luas) -- unmodified
 mockFoxPath="D:/Projects/MGS/!InfiniteHeaven/!modlua/MockFoxLua/"--tex path of MockFox scripts
@@ -15,7 +16,13 @@ package.cpath=mockFoxPath.."?.dll"--tex for bit.dll TODO: build equivalent cpath
 dofile(mockFoxPath.."/loadMockFox.lua")
 --GOTCHA dofile,loadfile redirected to DoFile,LoadFile, see loadMockFox WORKAROUND
 
+
 DoFile(foxLuaPath.."/init.lua")
+
+--tex IH from trying to continue if it has this showstopper
+if InfCore and InfCore.modDirFail then
+  return
+end
 
 do
   local chunk,err=LoadFile(foxLuaPath.."/Tpp/start.lua")
@@ -31,3 +38,11 @@ do
     until coroutine.status(co)=="dead"
   end
 end
+
+--tex InfCore.allLoaded is set true at end of start.lua, so in theory it should be an indicator that mockfox is fine and you can use it
+--however due to IH having to use PCalls to get any kind of error feedback from runtime there may be some soft errors, so just keep an eye out for ERROR in the log.
+if not InfCore or not InfCore.allLoaded then
+  print"ERROR: MockFox did not complete loading"
+  return
+end
+
