@@ -1,11 +1,15 @@
 MockFox changelog
 
+r43 - 2017-08-09
+Support for relative paths for foxGamePath,foxLuaPath,mockFoxPath on Unity/MockFoxManager
+error output for io.open,write.
+
 r42
 IH modelInfo files now added to IHGenKnownModuleNames, will no longer generate mock modules.
 
 Included IHGenKnownModuleNames.lua, required by IHTearDown
 
-
+Fox: StrCode32, PathFileNameCode32 via GzsTool.Core Hashing - must add GzsTool.Core assembly to Unity
 
 r41 - 2017-07-24
 MockFoxEngine.lua - Added NULL with some notes.
